<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/ibHome"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@drawable/homeicon" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/applogo" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tvAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="About Us"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <ImageButton
            android:id="@+id/ibMenu"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@drawable/appmenu" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Save Your Confidential Data"
        android:textSize="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
         android:layout_gravity="center_horizontal"
        android:src="@drawable/applogo" />

<TextView android:id="@+id/tvVersion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/version"
    />

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="10dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal" />

 <TextView
     android:id="@+id/tvdevelopers"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
     android:text="@string/developers"
     android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>